--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </section>
-        <!-- Popular cruse card -->
+        <!-- Popular cruises card -->
         <section id="cruises" class="cruses-section">
             <h1>POPULAR CRUISES</h1>
             <div class="cruse-container">
